--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -20,12 +20,12 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y cmake
-        sudo apt-get install -y build-essential libglib2.0-dev libx11-dev libgl-dev  # İhtiyaç duyduğunuz kütüphaneler
-        sudo apt-get install -y g++ gcc make  # CMake ve derleyici araçları
+        sudo apt-get install -y build-essential libglib2.0-dev libx11-dev libgl-dev
+        sudo apt-get install -y g++ gcc make
 
     - name: Build project
       run: |
-        mkdir build
+        mkdir -p build  # Dizin zaten varsa hata vermez
         cd build
         cmake ..
         make
