--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,36 +1,160 @@
-name: Build CS 1.6 Client for PC
-
+name: Build
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
+  android:
+    name: Android
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout sources
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+      - name: Fetch YaPB Graphs from DB
+        run: scripts/yapb_graph_dl.sh
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+          cache: gradle
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+      - name: Build
+        run: ./gradlew assembleCi
+        working-directory: android
+      - name: Sign APK
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: android/app/build/outputs/apk/ci
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+        env:
+          BUILD_TOOLS_VERSION: "34.0.0"
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: Android
+          path: android/app/build/outputs/apk/ci/app-ci-unsigned-signed.apk
+  # psvita:
+  #   name: PS Vita
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout sources
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #         submodules: recursive
+  #     - name: Setup PS Vita SDK
+  #       run: scripts/psvita_sdk.sh
+  windows:
+    name: Windows
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        arch: ['x86', 'amd64']
+      fail-fast: false
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+      - name: Setup Visual Studio
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: ${{ matrix.arch }}
+      - name: Configure project
+        run: cmake --preset "win32-ci-${{ matrix.arch }}"
+      - name: Run appversion.sh
+        run: regamedll/version/appversion.sh "${{ github.workspace }}/3rdparty/ReGameDLL_CS"
+        shell: bash
+        working-directory: 3rdparty/ReGameDLL_CS
+      - name: Build
+        run: cmake --build .
+        working-directory: build
+      - name: Package
+        run: cpack --config CPackConfig.cmake
+        working-directory: build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ runner.os }}-${{ matrix.arch }}
+          path: build/*.zip
+  linux:
+    name: Linux
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        arch: ['i386', 'amd64']
+      fail-fast: false
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+      - name: Install dependencies
+        run: |
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+          sudo apt-get install libatomic1:i386 libgcc-s1:i386 \
+            libstdc++6:i386 gcc-multilib g++-multilib cmake \
+            ninja-build libfontconfig-dev:i386 libfontconfig-dev
+      - name: Configure project
+        run: cmake --preset "linux-ci-${{ matrix.arch }}"
+      - name: Build
+        run: cmake --build .
+        working-directory: build
+      - name: Package
+        run: cpack --config CPackConfig.cmake
+        working-directory: build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ runner.os }}-${{ matrix.arch }}
+          path: build/*.tar.gz
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [android, windows, linux]
+    steps:
+      - name: Fetch artifacts
+        uses: actions/download-artifact@v4
+      - name: Remove old release
+        uses: ClementTsang/delete-tag-and-release@v0.3.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: continuous
+          delete_release: true
+          repo: ${{ env.GITHUB_REPOSITORY }}
+      - name: Prepare release
+        run: |
+          mv Android/app-ci-unsigned-signed.apk CS16Client-Android.apk
 
-    - name: Install CMake
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y cmake
-        sudo apt-get install -y build-essential libglib2.0-dev libx11-dev libgl-dev
-        sudo apt-get install -y g++ gcc make
+          mv */*.zip .
+          mv */*.tar.gz .
 
-    - name: Clean up and build project
-      run: |
-        cd ./  # CMakeLists.txt dosyasının olduğu dizine geçiş yapıyoruz
-        cmake ..  # CMakeLists.txt dosyasının olduğu dizine işaret ediyor
-        make
-
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: cs-client-build
-        path: ./build
+          sleep 60s
+      - name: Purge artifacts
+        uses: geekyeggo/delete-artifact@v2
+        with:
+          name: "*"
+      - name: Upload new release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_name: ${{ env.GITHUB_REPOSITORY }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file_glob: true
+          file: CS16Client-*
+          tag: continuous
+          overwrite: true
+          prerelease: true
+          release_name: CS16Client development build
